--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,7 @@
     ],
     "rules": {
         "import/prefer-default-export": "off",
-        "indent": ["error", 4]
+        "indent": ["error", 4],
+        "linebreak-style": ["error", "windows"]
     }
 }
